# defi-ops

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  KIMI.md  PLAN.md  README.md  pyproject.toml
config/: CLAUDE.md  address_book.json  delivery.yaml  sources.yaml  watchdog.yaml  watchlist.yaml
docs/: TELEGRAM_TOPICS.md  wiki-migration-inventory.md
scripts/: auth_telegram.py  backup_untracked.sh  discover_sources.py  fetch_transcripts_conservative.py  lint_wiki.py  rebuild_backlinks.py  run_scalper.py  run_swing.py  safety_git_clean.py  search_wiki.py  session_close.py  session_start.py  telegram_bot.py  youtube_orchestrator.py
src/: CLAUDE.md  __init__.py  analyze.py  backtest.py  brief.py  circuit_breaker.py  classify.py  cli.py  config.py  daemon.py  dashboard_server.py  db.py  decide.py  deliver.py  execution.py  execution_prices.py  ingest.py  ingest_arkham.py  ingest_bluesky.py  ingest_funding.py  ingest_helius.py  ingest_rss.py  ingest_telegram.py  ingest_telegram_web.py  ingest_twitter.py  ingest_twitter_oembed.py  ingest_wallets.py  ingest_yields.py  ingest_youtube.py  liquidity.py  macro.py  paper_trading.py  portfolio.py  prices.py  quality.py  sizing.py  strategy_scalper.py  strategy_swing.py  ta_webhook_server.py  technical_analysis.py  (+6 more)
state/: .last_whale_run  discovered_sources.json  liquidity-cache.json  telegram_session.session  youtube-channel-ids.json
tests/: test_classify.py  test_db.py  test_decide.py  test_ingest.py  test_ingest_twitter_oembed.py  test_liquidity.py  test_wallets.py
wiki/: CLAUDE.md  hot.md  index.md  log.md  overview.md  (+1 more)
(+74 files in other folders)
