[project]
name = "defi-ops"
version = "0.0.1"
description = "DeFi signal pipeline for a $100k portfolio — read-only ingest, manual execution"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.0",
    "pyrogram>=2.0.106",
    "telethon==1.43.2",
    "tenacity>=9.0",
    "tgcrypto>=1.2.5",
    "yt-dlp>=2026.3.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "-q"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
